test/tests/stages/16_characters_and_strings/invalid_types/string_initializer_wrong_type.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[21]:
  int
  identifier(main)
  (
  void
  )
  {
  long
  identifier(ints)
  [
  const int(4)
  ]
  =
  string literal("abc")
  ;
  return
  identifier(ints)
  [
  const int(1)
  ]
  ;
  }
